<resources>
    <string name="app_name" translatable="false">Pay Up</string>
    <string name="tab_due">Due</string>
    <string name="tab_history">History</string>
    <string name="back_button">Return to main activity</string>
    <string name="user_button">Go to user activity</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile_picture">Profile picture</string>
    <string name="accounts">Accounts</string>
    <string name="checkout">Checkout</string>
    <string name="create_expense">Create Expense</string>
    <string name="new_expense">New Expense</string>
    <string name="stripe_account">Stripe Account</string>
    <string name="stripe_powered">Powered by Stripe</string>
    <string name="login_with_twitter">Sign in with Twitter</string>
    <string name="tab_incoming">Incoming</string>
    <string name="user">User</string>
    <string name="payment_success">Payment Successful</string>
    <string name="pricePerP">Price per person: </string>
    <string name="pay_with_google">Proceed with Google Pay</string>
    <string name="payment_fail">Payment Successful</string>
    <string name="email">Email</string>
    <string name="payment_method">Select a Payment Method</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="name">Name</string>
    <string name="or">- Or -</string>
    <string name="password">Password</string>
    <string name="login_with_password">Log in</string>
    <string name="register">Register</string>
    <string name="menu">Menu</string>
    <string name="publish_key">pk_test_51HnPJaAXocUznruHqwf1wdNuZeIEEkX9ODwT0yuhtsv9nFPoghcpWbRLDcq3GU0k7g3RlPwCQGhCHVcMPe9nmoqB00JWK66tDF</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="login_with_facebook">Sign in with Facebook</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="facebook_application_id" translatable="false">440518313790406</string>
    <string name="facebook_login_protocol_scheme" translatable="false">440518313790406</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="backToSignIn">Back To Sign In</string>
    <string name="facebook_app_id">440518313790406</string>
    <string name="fb_login_protocol_scheme">fb440518313790406</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="total_price">Total Price</string>
    <string name="price">Price</string>
    <string name="price_pp">Price per Person: </string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="received">Received</string>
    <string name="price_includes_yourself">Price includes Yourself</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="method">Method</string>

</resources>