<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.payment.CheckoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back_button"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="60dp"
                app:iconTint="@color/colorOnPrimary"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/details_title"
                style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/checkout"
                android:textSize="24sp" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/parentLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/paymentLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <com.stripe.android.view.CardInputWidget
                android:id="@+id/cardInputWidget"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp">

            </com.stripe.android.view.CardInputWidget>

            <TextView
                android:id="@+id/service_name_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorOnBackground"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/amount_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorOnSurface"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/paymentmethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/payment_method"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/payButton"
                style="@style/Stripe3DS2Button"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorSecondaryVariant"
                android:text="@string/confirm_payment"
                android:textColor="@color/colorOnSecondary" />

            <Button
                android:id="@+id/payGoogleButton"
                style="@style/Stripe3DS2Button"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorSecondaryVariant"
                android:text="@string/pay_with_google"
                android:textColor="@color/colorOnSecondary" />

        </LinearLayout>

        <ImageView
            android:id="@+id/stripeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/stripe_powered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/powered_by_stripe_blurple" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>