<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.DayNight.Dialog.Alert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.accounts.SignIn">

    <LinearLayout
        android:id="@+id/parentLinear"
        android:layout_width="300dp"
        android:layout_height="740dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints=""
                    android:background="@color/colorBackground"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/colorBackground"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textAutoCorrect|textPassword|textAutoComplete"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:autofillHints=""
                    android:background="@color/colorBackground"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <TextView
                android:id="@+id/orTextRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="18sp" />

            <Button
                android:id="@+id/backToSignIn"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:backgroundTint="@color/colorSecondaryVariant"
                android:text="@string/backToSignIn" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.Material.ProgressBar.Small.Title"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:clickable="false"
        android:hapticFeedbackEnabled="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>


</androidx.constraintlayout.widget.ConstraintLayout>