<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/parentLinear"
        android:layout_width="300dp"
        android:layout_height="740dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/paymentLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/paymentstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/paymentmethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/payment_method"
            android:textAlignment="center"
            android:textStyle="italic" />

        <Button
            android:id="@+id/payButton"
            style="@style/Stripe3DS2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/confirm_payment"
            android:textColor="@color/colorOnSecondary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="310dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|center_horizontal"
            app:srcCompat="@drawable/powered_by_stripe_blurple" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>